fix some scrollbar spacing

--- a/source/widgets/scrollbar.scss
+++ b/source/widgets/scrollbar.scss
@@ -2,7 +2,7 @@ scrollbar {
   min-width: 7px;
   min-height: 25px;
   padding: 5px;
-  padding-left: 2px;
+  padding-left: 3px;
   border: none;
 
   & button {
